# focus-spot

./: .env.example  .gitignore  CLAUDE.md  GOAL.md  README.md  SPEC.md  docker-compose.yml
.claude/: settings.json
.claude/skills/commit-push-pr/: SKILL.md
.claude/skills/db-migrate/: SKILL.md
.claude/skills/dev-start/: SKILL.md
.claude/skills/verify/: SKILL.md
api/: alembic.ini  config.py  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 9a7e21f382e5_initial.py  bda42eff96da_add_user_preferences.py  d678195271bb_nullable_hashed_password.py
api/db/: database.py  redis.py
api/models/: cafe.py  health_data.py  user.py
api/routers/: auth.py  cafes.py  condition.py  deps.py  google_auth.py  health.py  users.py
api/scripts/: seed_cafes.py  seed_cafes_auto.py
api/services/: ai_tagger.py  cafe_recommender.py  condition.py  kakao.py  review_scraper.py
api/tests/: test_condition.py
ios/FocusSpot/Sources/App/: AuthManager.swift  ContentView.swift  FocusSpotApp.swift  SyncManager.swift
ios/FocusSpot/Sources/HealthKit/: HealthKitManager.swift
ios/FocusSpot/Sources/Models/: HealthSnapshot.swift
ios/FocusSpot/Sources/Networking/: APIClient.swift
web/: FocusSpot Prototype (standalone).html  auth.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/focusspot-token/: route.ts
web/components/: AuthForm.tsx  CafeList.tsx  ConditionCard.tsx
web/lib/: api.ts
web/types/: index.ts  next-auth.d.ts
